--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "bootstrap": "^4.1.3",
     "cors": "^2.8.4",
     "css-loader": "^1.0.0",
-    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.11",
     "image-webpack-loader": "^4.3.1",
     "node-sass": "^4.9.2",
+    "postcss-loader": "^3.0.0",
     "react-js-pagination": "^3.0.2",
     "sass-loader": "^7.1.0",
     "source-map-loader": "^0.2.3",
